<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:id="@+id/tvOrderTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_title"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_input"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_name"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/bg_input"/>
    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_number"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="15dp"
        android:inputType="phone"
        android:background="@drawable/bg_input"/>
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_address"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="15dp"
        android:inputType="text"
        android:background="@drawable/bg_input"/>

    <TextView
        android:id="@+id/tvTotalPriceOrder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Итоговая сумма:"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_order"
        android:textColor="@color/accent_green"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_input"
        android:gravity="center"/>
    <TextView
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_back"
        android:textColor="@color/accent_green"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_input"
        android:gravity="center"/>


</LinearLayout>