<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="200dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_name"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_input"
        />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_email"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_input"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_password"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:background="@drawable/bg_input"/>
    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Зарегестрироваться"
        android:textColor="@color/accent_green"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/tvGoLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Назад"
        android:textColor="@color/accent_green"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center" />


</LinearLayout>