<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/bg_screen">
    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:text="🖥"
        android:textSize="32dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/bg_icon_circle"
        />
    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MyDNS"
        android:textSize="32sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_email"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_input"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_password"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:background="@drawable/bg_input"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"/>
    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/btn_login"
        android:textColor="@color/accent_green"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
       />
    <TextView
        android:id="@+id/btnGoRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Нет аккаунта? Зарегистрироваться"
        android:textColor="@color/accent_green"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center"
       />


</LinearLayout>
